--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-router-dom": "^6.22.3",
+    "typed-js": "^0.2.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
