--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.51.2",
     "react-router-dom": "^6.22.3",
     "typed-js": "^0.2.3",
+    "typed.js": "^2.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
